--- a/data.yml
+++ b/data.yml
@@ -1,7 +1,17 @@
-defaultStorageMapping: SOURCE
+defaultStorageMapping: TARGET
 installedPackages: {}
 jobs: {}
-locations: {}
+locations:
+  SOURCE:
+    mappingDefinitions:
+      "14":
+        database: SALES
+        schema: SALES
+  TARGET:
+    mappingDefinitions:
+      "14":
+        database: PC_COALESCE_DB
+        schema: PUBLIC
 macros: {}
 packages: {}
 projects: {}
